--- a/Aakash/Git demo/Main.xaml
+++ b/Aakash/Git demo/Main.xaml
@@ -1,14 +1,11 @@
-﻿<Activity mc:Ignorable="sap sap2010" x:Class="_Test" mva:VisualBasic.Settings="{x:Null}"
-          sap:VirtualizedContainerService.HintSize="376.8,292.8" sap2010:WorkflowViewState.IdRef="_Test_1"
-          xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities"
-          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-          xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities"
-          xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation"
-          xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation"
-          xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib"
-          xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib"
-          xmlns:ui="http://schemas.uipath.com/workflow/activities"
-          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" mva:VisualBasic.Settings="{x:Null}"
+xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities"
+xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities"
+xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation"
+xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation"
+xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib"
+xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <TextExpression.NamespacesForImplementation>
         <sco:Collection x:TypeArguments="x:String">
             <x:String>System.Activities</x:String>
@@ -32,8 +29,6 @@
             <x:String>UiPath.Core</x:String>
             <x:String>UiPath.Core.Activities</x:String>
             <x:String>System.Windows.Markup</x:String>
-            <x:String>System.IO.Compression</x:String>
-            <x:String>System.Xml.Serialization</x:String>
         </sco:Collection>
     </TextExpression.NamespacesForImplementation>
     <TextExpression.ReferencesForImplementation>
@@ -51,30 +46,9 @@
             <AssemblyReference>WindowsBase</AssemblyReference>
             <AssemblyReference>PresentationCore</AssemblyReference>
             <AssemblyReference>System.Xaml</AssemblyReference>
-            <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
-            <AssemblyReference>System.ServiceModel</AssemblyReference>
-            <AssemblyReference>System.Data.DataSetExtensions</AssemblyReference>
             <AssemblyReference>UiPath.System.Activities</AssemblyReference>
             <AssemblyReference>UiPath.UiAutomation.Activities</AssemblyReference>
+            <AssemblyReference>System.Data.DataSetExtensions</AssemblyReference>
         </sco:Collection>
     </TextExpression.ReferencesForImplementation>
-    <Sequence DisplayName="_Test" sap:VirtualizedContainerService.HintSize="336.8,212.8"
-              sap2010:WorkflowViewState.IdRef="Sequence_1">
-        <Sequence.Variables>
-            <Variable x:TypeArguments="scg:Dictionary(x:String, x:Object)" Name="Config" />
-        </Sequence.Variables>
-        <sap:WorkflowViewStateService.ViewState>
-            <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-            </scg:Dictionary>
-        </sap:WorkflowViewStateService.ViewState>
-        <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke InitAllSettings workflow"
-                               sap:VirtualizedContainerService.HintSize="314.4,88"
-                               sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False"
-                               WorkflowFileName="Framework\InitAllSettings.xaml">
-            <ui:InvokeWorkflowFile.Arguments>
-                <OutArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="Config">[Config]</OutArgument>
-            </ui:InvokeWorkflowFile.Arguments>
-        </ui:InvokeWorkflowFile>
-    </Sequence>
 </Activity>
